<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/bg_card_clickable"
    android:padding="@dimen/space_l"
    android:layout_marginBottom="@dimen/space_m">

    <ImageView
        android:id="@+id/img_chauffeur"
        android:layout_width="@dimen/avatar_m"
        android:layout_height="@dimen/avatar_m"
        android:background="@drawable/bg_circle_pale"
        android:padding="@dimen/space_m"
        android:src="@drawable/ic_person"
        android:tint="@color/primary"
        android:contentDescription="@string/cd_avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/space_m"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chauffeur_name"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/chauffeur_phone"
            style="@style/TextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_call"
        android:layout_width="@dimen/avatar_s"
        android:layout_height="@dimen/avatar_s"
        android:background="@drawable/bg_circle_pale"
        android:padding="@dimen/space_s"
        android:src="@drawable/ic_phone"
        android:tint="@color/primary"
        android:contentDescription="@string/cd_call" />

    <ImageView
        android:id="@+id/btn_sms"
        android:layout_width="@dimen/avatar_s"
        android:layout_height="@dimen/avatar_s"
        android:layout_marginStart="@dimen/space_s"
        android:background="@drawable/bg_circle_pale"
        android:padding="@dimen/space_s"
        android:src="@drawable/ic_sms"
        android:tint="@color/primary"
        android:contentDescription="@string/sms" />
</LinearLayout>
